# my-soc-ops-python

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
configs/: default.yaml
src/soc_ops/: __init__.py  cli.py  config.py
tests/: test_cli.py
